k8s/app/httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: http
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80
