k8s/app/httpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  namespace: http
spec:
  ingressClassName: nginx
  rules:
    - host: httpd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
